--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "sass": "^1.51.0",
+    "sass-loader": "^13.0.0",
+    "typescript": "~4.6.2",
+    "webpack": "^5.72.1"
   }
 }
